--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,8 +6,8 @@ node {
       // Get the Maven tool.
       // ** NOTE: This 'M3' Maven tool must be configured
       // **       in the global configuration.           
-      mvnHome = tool 'Maven3'
-      jdkhome = tool 'jdk11'
+      maven3 = tool 'maven3'
+      java13 = tool 'java13'
 ​
    }
         
