--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ node {
         
    stage('Build') {
       // Run the maven build
-      withEnv(["MVN_HOME=$mvnHome", "JAVA_HOME=$jdkhome"]) {
+      withEnv(["MVN_HOME=$mvnHome", "JAVA_HOME=$java13"]) {
       if (isUnix()) {
          sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean build"
       } else {
